# evalAd5933

./: CMakeLists.txt  README.md
include/: ad5933types.h  libad5933.h  types.h
lib/: libad5933.cpp
src/: main.cpp
